sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:18: error: Unmatched closing brace '}' ignored here
         }
         ^AlgBubbleSort1:19: error: ')' expected but '}' found.
         }
         ^